# Utilibot

./: .env  .eslintrc.json  .gitignore  :c  README.md  add_reaction  data.db  data.db-journal  data.json  data.json.bak  ecosystem.config.js  git.sh  main.py  main.py.save  package-lock.json  package.json  pyproject.toml  requirements.txt  self.bot  tsconfig.json
.github/workflows/: main.yml  nodejs.yml
cogs/: _dbl.py  api.py  channelutils.py  config.py  customcommands.py  data.json.bak  debug.py  debug.py.save  dev.py  friendserver.py  fun.py  guilds.py  info.py  locking.py  logging.py  moderation.py  music.py  projectEATS.py  reminders.py  tickets.py  utils.py  voice.py  web.py
src/: bot.ts
src/commands/admin/: PrefixCommand.ts
src/commands/info/: BotInfoCommand.ts  HelpCommand.ts  PingCommand.ts
src/commands/moderation/: BanCommand.ts  KickCommand.ts  ModlogCommand.ts  WarnCommand.ts
src/commands/owner/: EvalCommand.ts  ReloadCommand.ts
src/config/: example-options.ts
src/extensions/: ApiHelper.ts  BotClient.ts  BotCommand.ts  BotInhibitor.ts  BotListener.ts  Interfaces.ts  Util.ts
src/inhibitors/blacklist/: BlacklistInhibitor.ts
src/lib/: top.gg.ts
src/lib/extensions/: BotClient.ts  BotGuild.ts  BotMessage.ts  Util.ts
src/lib/types/: Models.ts
src/lib/utils/: TopGG.ts
src/listeners/client/: ReadyListener.ts
src/listeners/commands/: CommandBlockedListener.ts
web/: server.js
web/static/: index.css  index.html
web/views/: index.ejs  index.html
