[tool.poetry]
name = "utilibot"
version = "1.0.0"
description = "A discord bot in python which has many utilities"
authors = ["Tyman"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
"discord.py" = "^1.5.1"
postbin = {git = "https://github.com/dragdev-studios/PostBin"}
python-dotenv = "^0.15.0"
jishaku = "^1.19.2"
youtube_dl = "^2020.11.19"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
